# Operations_on_accounts_skypro_3

./: .gitignore  README.md  pyproject.toml
src/: change_data_format.py  data_selection.py  display_transactions.py  get_operations_data.py  main.py
src/utils/: __init__.py  display_transactions.py  get_operations_data.py  sorting.py
tests/: test_data_selection.py  test_display_transactions.py  test_formatting_data.py  test_get_operations_data.py  test_sorting.py
