[tool.poetry]
name = "operations-on-accounts-skypro-3"
version = "0.1.0"
description = ""
authors = ["Valera Babkin <valera.babkin.13@mail.ru>"]
readme = "README.md"
packages = [{include = "operations_on_accounts_skypro_3"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
